# DataBase

./: .env.example  .gitignore  CLAUDE.md  README.md  probe_positions.py  pyproject.toml  requirements.txt  verify_v2_orders.py
.claude/: settings.json
results/: buy_no_ev_by_lead_and_band.parquet  calibration_nbm_aug2025.parquet  calibration_nbm_jul2025.parquet  calibration_nbm_mar_aug2025.parquet  dataset_nbm_aug2025.parquet  dataset_nbm_jul2025.parquet  dataset_nbm_mar_aug2025.parquet  forecast_vs_market_apr_may_2026.parquet  lag_analysis_apr_may_2026.parquet  market_calibration_allcities.parquet  market_calibration_polymarket_summer2025.parquet  market_dataset_allcities.parquet  market_dataset_polymarket_summer2025.parquet
src/polycal/: __init__.py  build_dataset.py  calibration.py  config.py  fetch_actuals.py  fetch_forecasts.py  fetch_polymarket.py  main.py  market_calibration.py  plot.py  plot_market.py
src/polycal_lag/: forecast_batch.py  forecast_multi.py  forecast_vs_market.py  run_lag_analysis.py  run_lag_v2.py  stations.py
tests/: test_smoke.py
